force-app/main/default/objects/EYN_Formulario__mdt/EYN_Formulario__mdt.object-meta.xml
<CustomObject>
    <label>EYN Formulario</label>
    <pluralLabel>EYN Formulario</pluralLabel>
</CustomObject>