force-app/main/default/objects/EYN_Formulario__mdt/fields/Api_name_del_campo__c.field-meta.xml
<CustomField>
    <fullName>Api_name_del_campo__c</fullName>
    <label>Api name del campo</label>
    <type>TextArea</type>
</CustomField>