force-app/main/default/objects/EYN_Formulario__mdt/fields/Cantidad_de_unidades__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_unidades__c</fullName>
    <label>Cantidad de unidades</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>