force-app/main/default/objects/EYN_Formulario__mdt/fields/Es_pregunta__c.field-meta.xml
<CustomField>
    <fullName>Es_pregunta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es pregunta</label>
    <type>Checkbox</type>
</CustomField>