force-app/main/default/objects/EYN_Formulario__mdt/fields/Es_razon_de_no_consumo__c.field-meta.xml
<CustomField>
    <fullName>Es_razon_de_no_consumo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es razón de no consumo</label>
    <type>Checkbox</type>
</CustomField>