force-app/main/default/objects/EYN_Formulario__mdt/fields/Es_restriccion__c.field-meta.xml
<CustomField>
    <fullName>Es_restriccion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es restricción</label>
    <type>Checkbox</type>
</CustomField>