force-app/main/default/objects/EYN_Formulario__mdt/fields/Es_unidades__c.field-meta.xml
<CustomField>
    <fullName>Es_unidades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es unidades</label>
    <type>Checkbox</type>
</CustomField>