force-app/main/default/objects/EYN_Formulario__mdt/fields/Pregunta_para_VF__c.field-meta.xml
<CustomField>
    <fullName>Pregunta_para_VF__c</fullName>
    <label>Pregunta para VF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>