force-app/main/default/objects/EYN_Formulario__mdt/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <length>254</length>
    <type>Text</type>
</CustomField>